# animated-bars

./: .gitignore  README.md  progress_bar.py  progressbar_builder.py  setup.cfg
src/bars4progress/: __init__.py  animatedbarbuilder.py  animtools.py  horizontalbarbuilder.py  progress_bar.py  progressbar.py  progressbar_builder.py  templates.py
src/bars4progress.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: file_download_test.py  implementation.py
