[metadata]
name = bars4progress
version = 0.1.2
author = Gann4Life
author_email = santiago_ariel_mansilla@hotmail.com
description = Simple and customizable animated progress bars for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/Gann4Life/bars4progress/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
